--- a/task13and14.html
+++ b/task13and14.html
@@ -3,24 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Document1</title>
   </head>
   <body>
     <div class="container">
       <form id="form">
         <h2>BOOK A CALL</h2>
         <label for="username">Name</label>
-        <input type="text" id="username" name="username" required />
+        <input type="text" id="username" name="username" required /><br /><br />
         <label for="email">Email</label>
-        <input type="email" id="email" name="email" required />
+        <input type="email" id="email" name="email" required /><br /><br />
         <label for="phone">Phone</label>
-        <input type="tel" id="phone" name="phone" required />
+        <input type="tel" id="phone" name="phone" required /> &nbsp; &nbsp;
+        &nbsp;
         <input type="submit" value="Get a Call" />
       </form>
       <div id="user-list">
         <!-- User details will be displayed here -->
       </div>
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.2/axios.min.js"></script>
 
     <script>
       function displayUserDetails() {
@@ -127,6 +130,18 @@
           "userDetails",
           JSON.stringify(existingUserDetails)
         );
+
+        axios
+          .post(
+            "https://crudcrud.com/api/1feacc3327c04ac392325d6f855363ac/users",
+            userDetails
+          )
+          .then(res => {
+            console.log(res);
+          })
+          .catch(err => {
+            console.log(err);
+          });
 
         // Clear the input fields
         document.getElementById("username").value = "";
