--- a/task13and14.html
+++ b/task13and14.html
@@ -26,11 +26,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.2/axios.min.js"></script>
 
     <script>
-      function displayUserDetails() {
+      async function displayUserDetails() {
         var userContainer = document.getElementById("user-list");
         userContainer.innerHTML = ""; // Clear the previous content
 
-        var userDetails = JSON.parse(localStorage.getItem("userDetails")) || [];
+        // var userDetails = JSON.parse(localStorage.getItem("userDetails")) || [];
+        var axiosRes = await axios.get(
+          "https://crudcrud.com/api/8d20a64cdf4a49a89e58ff9236578636/users"
+        );
+        var userDetails = axiosRes.data;
 
         userDetails.forEach(function (user, index) {
           var userDiv = document.createElement("div");
@@ -65,21 +69,6 @@
         });
       }
 
-      // Function to remove a user at a specific index
-      function removeUserAtIndex(index) {
-        var userDetails = JSON.parse(localStorage.getItem("userDetails")) || [];
-
-        if (index >= 0 && index < userDetails.length) {
-          userDetails.splice(index, 1); // Remove the user at the specified index
-
-          // Update local storage with the modified data
-          localStorage.setItem("userDetails", JSON.stringify(userDetails));
-
-          // Re-display the user details on the UI
-          displayUserDetails();
-        }
-      }
-
       // Function to edit a user at a specific index
       function editUserAtIndex(index) {
         var userDetails = JSON.parse(localStorage.getItem("userDetails")) || [];
@@ -101,56 +90,76 @@
         }
       }
 
-      displayUserDetails();
+      // Function to remove a user at a specific index
+      async function removeUserAtIndex(index) {
+        var userDetails = JSON.parse(localStorage.getItem("userDetails")) || [];
 
-      // Add an event listener to the form
-      document.getElementById("form").addEventListener("submit", function (e) {
-        e.preventDefault(); // Prevent the default form submission behavior
+        if (index >= 0 && index < userDetails.length) {
+          userDetails.splice(index, 1); // Remove the user at the specified index
 
-        // Retrieve existing user details from local storage (if any)
-        var existingUserDetails =
-          JSON.parse(localStorage.getItem("userDetails")) || [];
-
-        // Get user input values
-        var username = document.getElementById("username").value;
-        var email = document.getElementById("email").value;
-        var phone = document.getElementById("phone").value;
-
-        // Create an object to store the current user's details
-        var userDetails = {
-          username: username,
-          email: email,
-          phone: phone,
-        };
-
-        // Append the new user's details to the existing data
-        existingUserDetails.push(userDetails);
-
-        localStorage.setItem(
-          "userDetails",
-          JSON.stringify(existingUserDetails)
-        );
-
-        axios
-          .post(
-            "https://crudcrud.com/api/1feacc3327c04ac392325d6f855363ac/users",
-            userDetails
-          )
-          .then(res => {
-            console.log(res);
-          })
-          .catch(err => {
-            console.log(err);
-          });
-
-        // Clear the input fields
-        document.getElementById("username").value = "";
-        document.getElementById("email").value = "";
-        document.getElementById("phone").value = "";
+        // Update local storage with the modified data
+        localStorage.setItem("userDetails", JSON.stringify(userDetails));
+        // await axios.delete(
+        //   `https://crudcrud.com/api/8d20a64cdf4a49a89e58ff9236578636/users/${index}`
+        // );
 
         // Re-display the user details on the UI
         displayUserDetails();
-      });
+        }
+      }
+
+      displayUserDetails();
+
+      // Add an event listener to the form
+      document
+        .getElementById("form")
+        .addEventListener("submit", async function (e) {
+          e.preventDefault(); // Prevent the default form submission behavior
+
+          // Retrieve existing user details from local storage (if any)
+          // var existingUserDetails =
+          //   JSON.parse(localStorage.getItem("userDetails")) || [];
+
+          // Get user input values
+          var username = document.getElementById("username").value;
+          var email = document.getElementById("email").value;
+          var phone = document.getElementById("phone").value;
+
+          // Create an object to store the current user's details
+          var userDetails = {
+            username: username,
+            email: email,
+            phone: phone,
+          };
+
+          // Append the new user's details to the existing data
+          existingUserDetails.push(userDetails);
+
+          // localStorage.setItem(
+          //   "userDetails",
+          //   JSON.stringify(existingUserDetails)
+          // );
+
+          await axios
+            .post(
+              "https://crudcrud.com/api/8d20a64cdf4a49a89e58ff9236578636/users",
+              userDetails
+            )
+            .then(res => {
+              console.log(res.data);
+            })
+            .catch(err => {
+              console.log(err);
+            });
+
+          // Clear the input fields
+          document.getElementById("username").value = "";
+          document.getElementById("email").value = "";
+          document.getElementById("phone").value = "";
+
+          // Re-display the user details on the UI
+          displayUserDetails();
+        });
     </script>
   </body>
 </html>
